--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "capstone-project-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "**Project Objective:** Develop a comprehensive web application for managing student information, demonstrating full-stack development skills through a robust, user-friendly student management system. The project aims to showcase understanding in web development technologies, API design, and responsive application development.",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -10,10 +10,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RP-Tumba/studentsync-backend-crimson"
+    "url": "git+https://github.com/RP-Tumba/studentsync-backend-crimson.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "elyse",
   "license": "ISC",
   "type": "module",
   "bugs": {
@@ -29,7 +29,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
+    "nodemon": "^3.1.10",
     "prettier": "^3.5.3"
   }
 }
